[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/title/title.gd" type="Script" id=1]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_top = 233.0
margin_right = 1024.0
margin_bottom = 247.0
text = "Name of Game"
align = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 251.0
margin_right = 532.0
margin_bottom = 271.0
size_flags_horizontal = 4
text = "Start"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 275.0
margin_right = 533.0
margin_bottom = 295.0
size_flags_horizontal = 4
text = "Load"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_left = 480.0
margin_top = 299.0
margin_right = 543.0
margin_bottom = 319.0
size_flags_horizontal = 4
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_left = 483.0
margin_top = 323.0
margin_right = 540.0
margin_bottom = 343.0
size_flags_horizontal = 4
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 492.0
margin_top = 347.0
margin_right = 532.0
margin_bottom = 367.0
size_flags_horizontal = 4
text = "Quit"

[node name="CreditsPop" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPop"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]Made with [url=https://godotengine.org/]Godot 3.4.4[/url][/center]"
text = "Made with Godot 3.4.4"
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="meta_clicked" from="CreditsPop/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
